# Finetuning

./: .gitignore  README.md
finetuning/: README.md  pyproject.toml
finetuning/finetuning/: Finetune.ipynb  data.ipynb  data_analysis.ipynb  eval.py  finetune.py  run.py
