[tool.poetry]
name = "finetuning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
transformers = "^4.44.2"
torch = "^2.4.1"
sentencepiece = "^0.2.0"
bitsandbytes = "^0.44.0"
xformers = "^0.0.28.post1"
peft = "^0.13.0"
accelerate = "^0.34.2"
trl = "^0.11.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
fire = "^0.6.0"
unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["colab-new"]}
nvitop = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
